[gd_scene load_steps=3 format=3 uid="uid://cvxq13weiv5vs"]

[ext_resource type="Script" path="res://global/global_menu.gd" id="1_20pts"]
[ext_resource type="FontFile" uid="uid://cu1gycbn7rgh1" path="res://fonts/ka1.ttf" id="1_us1w5"]

[node name="GlobalMenu" type="Node2D"]
script = ExtResource("1_20pts")

[node name="RootMenu" type="Node2D" parent="."]

[node name="Bases" type="Button" parent="RootMenu"]
offset_right = 168.0
offset_bottom = 27.0
focus_neighbor_bottom = NodePath("../Save")
theme_override_fonts/font = ExtResource("1_us1w5")
text = "Bases"

[node name="Save" type="Button" parent="RootMenu"]
offset_top = 28.0
offset_right = 168.0
offset_bottom = 55.0
focus_neighbor_top = NodePath("../Bases")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_fonts/font = ExtResource("1_us1w5")
text = "Save"

[node name="Quit" type="Button" parent="RootMenu"]
offset_top = 56.0
offset_right = 168.0
offset_bottom = 83.0
focus_neighbor_top = NodePath("../Save")
theme_override_fonts/font = ExtResource("1_us1w5")
text = "Quit"

[node name="BasesMenu" type="Node2D" parent="."]

[node name="NewBase" type="Button" parent="BasesMenu"]
offset_right = 168.0
offset_bottom = 27.0
focus_neighbor_bottom = NodePath("../Back")
theme_override_fonts/font = ExtResource("1_us1w5")
text = "New base"

[node name="Back" type="Button" parent="BasesMenu"]
offset_top = 28.0
offset_right = 168.0
offset_bottom = 55.0
focus_neighbor_top = NodePath("../NewBase")
theme_override_fonts/font = ExtResource("1_us1w5")
text = "Back"

[connection signal="pressed" from="RootMenu/Bases" to="." method="_on_bases_pressed"]
[connection signal="pressed" from="RootMenu/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="RootMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="BasesMenu/Back" to="." method="_on_bases_back_pressed"]
